kubernetes/applications/edge-service/production/patch-resources.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-service
spec:
  template:
    spec:
      containers:
        - name: edge-service
          resources:
            requests:
              memory: "756Mi"
              cpu: "0.1"
            limits:
              memory: "756Mi"
              cpu: "2"
