kubernetes/applications/edge-service/production/patch-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polar-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/server-snippet: |-
      location ~* "^/actuator(/.*)?$" {
        deny all;
        return 403;
      }
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev.shayfoo.net 
      secretName: default-tls
  rules:
    - host: dev.shayfoo.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edge-service
                port:
                  number: 80
